force-app/main/default/objects/twogz_credential__c/twogz_credential__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>twogz_credential</label>
</CustomObject>