force-app/main/default/objects/twogz_credential__c/fields/access_token__c.field-meta.xml
<CustomField>
    <fullName>access_token__c</fullName>
    <label>access_token</label>
    <length>200</length>
    <type>Text</type>
</CustomField>