force-app/main/default/objects/twogz_credential__c/fields/client_Id__c.field-meta.xml
<CustomField>
    <fullName>client_Id__c</fullName>
    <label>client_Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>