force-app/main/default/objects/twogz_credential__c/fields/client_secret__c.field-meta.xml
<CustomField>
    <fullName>client_secret__c</fullName>
    <label>client_secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>