force-app/main/default/objects/twogz_credential__c/fields/isProduction__c.field-meta.xml
<CustomField>
    <fullName>isProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Check this field if your are running in production environnment</description>
    <label>isProduction</label>
    <type>Checkbox</type>
</CustomField>