force-app/main/default/objects/twogz_credential__c/fields/latitude__c.field-meta.xml
<CustomField>
    <fullName>latitude__c</fullName>
    <defaultValue>&quot;44.8412&quot;</defaultValue>
    <label>latitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>