force-app/main/default/objects/twogz_credential__c/fields/longitude__c.field-meta.xml
<CustomField>
    <fullName>longitude__c</fullName>
    <defaultValue>&quot;-0.5806&quot;</defaultValue>
    <label>longitude</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>