force-app/main/default/objects/twogz_credential__c/fields/weather_API_key__c.field-meta.xml
<CustomField>
    <fullName>weather_API_key__c</fullName>
    <defaultValue>&quot;3bb01e00b05e4c1aba584110230609&quot;</defaultValue>
    <label>weather_API_key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>